Fix file name text overlap in the file list.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1934,6 +1934,9 @@ a {
     cursor: default;
     -khtml-user-drag: element;
     clear: both;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
     .filelist:hover {
